deleted aside and main, added section

--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
         </nav>
     </header>
     <section>
-        <h1>Sneakers which will change your next step making it more sustainable, animal friendly, conscious
-        </h1>
+        <h2>Sneakers which will change your next step making it more sustainable, animal friendly, conscious
+        </h2>
         <img src="./Image/bg_shoes.png" alt="bg_shoes" >
-    </section>
     <div>
         <img src="./Image/pair_of_shoes.png" alt="pair_of_shoes" >
         <p>We realize quite well that shoes are one of the most consumed products within the industry of fashion, which means volumes can be important, which is a big social responsibility.</p>
     </div>
-    <main>
-      <div><img src="./Image/bg_dark.png" alt="bg" >
-      <p>Juarez is the name of the first sustainable sneaker shoes model from UNEAK, a new italian sustainable fashion brand, born from the ideas of Sonia and Davide. </p>  
-      </div>
+    </section>
+
+    <section>
+        <h2>Juarez is the name of the first sustainable sneaker shoes model from UNEAK, a new italian sustainable fashion brand, born from the ideas of Sonia and Davide. </h2>  
+        <img src="./Image/bg_dark.png" alt="bg" >
       <div>
         <img src="./Image/last_shoes.png" alt="sneaker shoes" >
         <strong>The Juarez sneaker model features certified sustainable materials 
         </strong>
-        <aside>It’s produced completely in Italy, in a warm region where all workers live very close to the production site.</aside>
+        <p>It’s produced completely in Italy, in a warm region where all workers live very close to the production site.</p>
       </div>
-    </main>
+    </section>
    
 </body>
 </html>
